--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.splitbit.sunshine.MainActivity" />
         </activity>
+        <provider
+            android:authorities="com.splitbit.sunshine"
+            android:name=".data.WeatherProvider" />
     </application>
 
 </manifest>
